--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </nav>
     <div id="container" class="w-full h-screen hidden justify-center items-center">
     <div class="w-9/12 mx-auto">
-       
+        
         <form class="flex flex-col gap-2 border border-orange-500 p-4 rounded-md">
-             <h1 class="py-3 text-white bg-orange-500 border rounded-md items-center justify-center m-auto p-2 ">فورم اضافه کردن کار های روزمره</h1>
-            <input class="border w-full py-2.5 border-orange-500 rounded-md focus:border-orange-300" type="text" id="input" value="" placeholder="امروز چه پلان دارید">
+            <h1 class="py-3 text-white bg-orange-500 border rounded-md items-center justify-center m-auto p-2 ">فورم اضافه کردن کار های روزمره</h1>
+            <input class="border w-full py-2.5 border-orange-500 rounded-md focus:border-orange-300 pr-2" type="text" id="input" value="" placeholder="امروز چه پلان دارید">
             <select class=" py-2.5 w-full border border-orange-500 rounded-md" id="order">
                 <option value="important" class="rounded-md">مهم</option
                 <option value="mediocre" class="rounded-md">متوسط</option>
@@ -26,6 +26,9 @@
             <button id="addtodo" class="py-2 text-stone-200 px-5 bg-orange-500 rounded-md">ذخیره کردن</button>
         </form>
     </div>
+    </div>
+    <div id="error">
+
     </div>
 </body>
 </html>
